--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,15 @@ before_install:
 
 script:
   - docker run aleksgor/docker-react npm run test -- --coverage --watchAll=false
+
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-north-1"
+  app: "u-docker-react"
+  env: "Udockerreact-env"
+  bucket_name: "elasticbeanstalk-eu-north-1-422701111692"
+  bucket_path: "u-docker-react"
+  on: 
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: "$AWS_SECRET_KEY"
